fix links color

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -74,8 +74,8 @@
     color: getColor(malibu);
   }
 
-  &.color-blue {
-    color: #88d8ff;
+  &.docschina {
+    color: #ffdd66;
   }
 
   &--active:after {
