--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -5,3 +5,21 @@
   font-weight: 600;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'iconfont';  /* project id 1093342 */
+  src: url('//at.alicdn.com/t/font_1093342_gaxa1vgrpiw.eot');
+  src: url('//at.alicdn.com/t/font_1093342_gaxa1vgrpiw.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1093342_gaxa1vgrpiw.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1093342_gaxa1vgrpiw.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1093342_gaxa1vgrpiw.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1093342_gaxa1vgrpiw.svg#iconfont') format('svg');
+}
+
+.iconfont{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
